fix(style): Standardize CSS formatting for improved readability

--- a/.self-use/CSS/Bewly User CSS.css
+++ b/.self-use/CSS/Bewly User CSS.css
@@ -21,17 +21,19 @@ section,
 aside,
 ul,
 li.context-menu-item,
-[class$='activated'],
+[class$="activated"],
 a:hover,
 div {
-	border-radius: 10px !important;
+  border-radius: 10px !important;
 }
 
 li.context-menu-item:hover,
 button:hover {
-  box-shadow: var(--bew-shadow-edge-glow-1), 0 0 0 2px var(--bew-fill-2), var(--bew-shadow-2);
+  box-shadow: var(--bew-shadow-edge-glow-1), 0 0 0 2px var(--bew-fill-2),
+    var(--bew-shadow-2);
   scale: 1.05;
-  transition: transform .3s cubic-bezier(.34,2,.6,1), background .3s ease, color .3s ease, box-shadow .6s ease, opacity .6s ease;
+  transition: transform 0.3s cubic-bezier(0.34, 2, 0.6, 1), background 0.3s ease,
+    color 0.3s ease, box-shadow 0.6s ease, opacity 0.6s ease;
 }
 
 button:active,
@@ -45,15 +47,16 @@ li.context-menu-item:active,
 .more-actions__trigger:active,
 .menu-popover__panel-item:active,
 .living-section__follow:active {
-	box-shadow: var(--bpx-box-shadow);
-	animation: clickAnimation .3s cubic-bezier(.34,2,.6,1);
+  box-shadow: var(--bpx-box-shadow);
+  animation: clickAnimation 0.3s cubic-bezier(0.34, 2, 0.6, 1);
 }
 
 @media (prefers-color-scheme: light) {
-    [class$='activated'] {
-        background-color: var(--bew-theme-color) !important;
-        border-color: var(--bew-theme-color-60) !important;
-        --un-shadow: 0 4px 30px color-mix(in oklab, #00A0D8, transparent 40%);
-        box-shadow: var(--un-ring-offset-shadow), var(--un-ring-shadow), var(--un-shadow);
-    }
+  [class$="activated"] {
+    background-color: var(--bew-theme-color) !important;
+    border-color: var(--bew-theme-color-60) !important;
+    --un-shadow: 0 4px 30px color-mix(in oklab, #00a0d8, transparent 40%);
+    box-shadow: var(--un-ring-offset-shadow), var(--un-ring-shadow),
+      var(--un-shadow);
+  }
 }
